fix z-index of canvas with search bar

--- a/client/src/Styles/modules/_display.scss
+++ b/client/src/Styles/modules/_display.scss
@@ -1,6 +1,7 @@
 .display {
     align-content: center;
     background-color: transparent;
+    position: relative;
     z-index: 100;
 }
 
