--- a/client/src/Styles/modules/_search.scss
+++ b/client/src/Styles/modules/_search.scss
@@ -2,6 +2,7 @@
   padding-bottom: 3%;
   background: url("./assets/food_pattern.png") $yellow;
   position: relative;
+  // z-index: -1;
 }
 
 .search-fields {
@@ -23,6 +24,9 @@
     &:hover {
       box-shadow: inset 0 0 10px $gray;
       transition: all .5s;
+
+      position: relative;
+      z-index: 100;
     }
   }
   #zip {
